--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <h1>Grupo 6 - Test Lab's</h1>
     <form action="" method="post">
         <label for="usuario">
+            Usuario
             <input id="usuario" type="text">
         </label>
-        <label for="contraseña">
-            <input id="contraseña" type="text">
+        <label for="contrasena">
+            Contraseña
+            <input id="contrasena" type="text">
         </label>
         <button type="submit">Enviar</button>
     </form>
