--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <h1>Grupo 6 - Test Lab's</h1>
     <form action="" method="post">
         <label for="usuario">
-            Usuario
-            <input id="usuario" type="text">
+           <span>Usuario</span>
+            <input for="usuario" id="usuario" type="text" name="usuario">
         </label>
         <label for="contrasena">
-            Contraseña
-            <input id="contrasena" type="text">
+            <span>Contraseña</span>
+            <input for="contrasena" id="contrasena" type="password" name="password">
         </label>
         <button type="submit">Enviar</button>
     </form>
